# imitation_learning

./: imitate_episodes.py  inference.py  inference_jd.py  inference_sl.py  policy.py  pretrain.py  readme.md  requirements.txt  run.md  test.py  utils.py
assets/: env.md  pipline.md  run.md
c++/: CMakeLists.txt  main.cpp  readme.md
detr/: main.py
detr/models/: __init__.py  backbone.py  detr_vae.py  position_encoding.py  transformer.py
robomimic/algo/: diffusion_policy.py
robomimic/scripts/: setup_macros.py
test/: inference2.py  inference_qh.py
